--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
         "bigfork/silverstripe-oauth-login": "^2.1",
         "foxworth42/oauth2-okta": "^1",
         "okta/sdk": "^1.3 || ^2",
-        "silverstripe/framework": "^4.10.0",
+        "silverstripe/framework": "^4.10.0 || ^5.0",
         "phptek/jsontext": "^2",
-        "symbiote/silverstripe-queuedjobs": "^4.9.0",
+        "symbiote/silverstripe-queuedjobs": "^4.9.0 || ^5.0.1",
         "cache/void-adapter": "^1.2.0"
     },
     "require-dev": {
