--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,15 @@
         ]
     },
     "require": {
-        "php": ">=7.3 || ^8",
+        "php": ^8",
         "bigfork/silverstripe-oauth-login": "^2.1",
         "foxworth42/oauth2-okta": "^1",
         "okta/sdk": "^1.3 || ^2",
-        "silverstripe/framework": "^4.10.0 || ^5.0",
+        "silverstripe/framework": "^5.0",
         "phptek/jsontext": "^2",
-        "symbiote/silverstripe-queuedjobs": "^4.9.0 || ^5.0.1",
-        "cache/void-adapter": "^1.2.0"
+        "symbiote/silverstripe-queuedjobs": "^5.0.1",
+        "cache/void-adapter": "^1.2.0",
+        "guzzlehttp/psr7": "^1.9.1"
     },
     "require-dev": {
         "mockery/mockery": "^1.5",
