--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         ]
     },
     "require": {
-        "php": ^8.0",
+        "php": "^8.0",
         "bigfork/silverstripe-oauth-login": "^2.1",
         "foxworth42/oauth2-okta": "^1",
         "okta/sdk": "^1.3 || ^2",
